--- a/doc/latex/tex/A_Plan_proyecto.tex
+++ b/doc/latex/tex/A_Plan_proyecto.tex
@@ -105,6 +105,16 @@ La tarea a realizar para la próxima semana es:
 \begin{itemize}
     \item Conseguir instalar \emph{Detectron2} en Gamma mediante versiones más antiguas de los paquete con el fin de evitar incompatibilidades.
 \end{itemize}
+\subsection{Sprint 10 - 29/04/2022}
+Para esta semana se ha conseguido instalar \emph{Detectron2} en Gamma. Para ello, se han tenido que utilizar versiones antiguas tanto de \emph{CUDA Toolkit} cómo de  \emph{PyTorch} para poder evitar las distintas incompatibilidades entre versiones.
+
+Se han instalado la versiones 10.1 de \emph{CUDA Toolkit} y la versión 1.4 de \emph{PyTorch}, junto con la versión del \emph{Detectron2} compatible para soportar dichas librerías.
+
+Las dos tareas próximas a realizar son:
+\begin{itemize}
+    \item Implementar de forma correcta el método para poder medir el tamaño del nervio del diente de la imagen.
+    \item Investigar las distintas GUI de Python para elegir una de ellas y poder montar la aplicación final.  
+\end{itemize}
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
