--- a/doc/latex/tex/A_Plan_proyecto.tex
+++ b/doc/latex/tex/A_Plan_proyecto.tex
@@ -140,6 +140,18 @@ Las próximas tareas a realizar son:
     \item Investigar y probar \emph{ipywidgets} con el fin de poder tener una pequeña interfaz dentro del \emph{notebook} que contendrá la aplicación final.
     \item Para poder medir la longitud del diente por la parte central, se ha pensado en utilizar \emph{Skeletonize} sobre el nervio y a la lineal central obtenida alargarla hasta el diente, para posteriormente calcular su longitud.
 \end{itemize}
+\subsection{Sprint 13 - 20/05/2022}
+Para este \emph{sprint} se ha implementado la técnica para medir la longitud del diente a través de la línea central del nervio. Con dicha técnica se han implementado un total de tres técnicas distintas para poder calcular el tamaño del diente.
+
+Pese a tener varias técnicas, ninguna de ellas parece que da buenos resultados por el momento, ya que los errores relativos son demasiados altos para que el odontólogo pueda usar algunos de estos métodos.
+
+Con respecto a \emph{ipywidgets}, se ha conseguido instalar, además de, investigar y probar los distintos tipos de \emph{widgets} que hay con el fin de ver cuales usar en la aplicación final.
+
+Las tareas a realizar para la próxima semana son:
+\begin{itemize}
+    \item Investigar porque los resultados obtenidos no son los esperados, ya que el proceso de segmentación es bastante bueno.
+    \item Desarrollar la aplicación final con las distintas funcionalidades de \emph{ipywidgets}.
+\end{itemize}
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
