--- a/doc/latex/tex/A_Plan_proyecto.tex
+++ b/doc/latex/tex/A_Plan_proyecto.tex
@@ -196,6 +196,18 @@ Por tanto, las tareas a hacer para la semana que viene son:
     \item Implementar la aplicación en \emph{Google Colab}.
     \item Comentar las diversas celdas de los diferentes \emph{notebooks} para facilitar su comprensión. 
 \end{itemize}
+\subsection{Sprint 17 - 16/06/2022}
+Para esta semana se ha solucionado el problema de la última técnica implementada. También se ha actualizado la aplicación para que trabaje con dicha técnica.
+
+La aplicación también se ha desarrollado y probado en \emph{Google Colab}, donde funciona correctamente.
+
+Con respecto a comentar las celdas de todos los \emph{notebooks}, se ha empezado, pero no se ha terminado.
+
+Las próximas tareas a realizar son:
+\begin{itemize}
+    \item Terminar de comentar todos los \emph{notebooks}.
+    \item Retocar la aplicación, añadiendo manual de usuario y más descripciones y efectuando alguna pequeña mejora.
+\end{itemize}
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
