Añadidos Comentarios + Mejoras en el Código

--- a/src/pruebas/Skimage+CV2_DetecciónBordes.ipynb
+++ b/src/pruebas/Skimage+CV2_DetecciónBordes.ipynb
@@ -28,13 +28,17 @@
       },
       "outputs": [],
       "source": [
-        "import cv2, os, json, shutil, zipfile\n",
+        "import cv2\n",
+        "import os\n",
+        "import json\n",
+        "import shutil\n",
+        "import zipfile\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "from skimage import feature, io\n",
         "from skimage.color import rgb2gray\n",
         "from skimage.util import img_as_ubyte\n",
-        "from google.colab.patches import cv2_imshow"
+        "from google.colab.patches import cv2_imshow\n"
       ]
     },
     {
@@ -55,28 +59,30 @@
       "outputs": [],
       "source": [
         "def borde_blanco(dic):\n",
-        "  for d in dic:\n",
-        "    foto = cv2.imread(d)\n",
-        "    ancho=foto.shape[1]\n",
-        "    alto=foto.shape[0]\n",
+        "    for d in dic:\n",
+        "        foto = cv2.imread(d)\n",
+        "        ancho = foto.shape[1]\n",
+        "        alto = foto.shape[0]\n",
         "\n",
-        "    for i in range(ancho):\n",
-        "      foto[0][i]=(255,255,255)\n",
-        "      foto[1][i]=(255,255,255)\n",
-        "      foto[2][i]=(255,255,255)\n",
-        "      foto[alto-1][i]=(255,255,255)\n",
-        "      foto[alto-2][i]=(255,255,255)\n",
-        "      foto[alto-3][i]=(255,255,255)\n",
+        "        # Se añade tres filas blancas en la parte superior e inferior\n",
+        "        for i in range(ancho):\n",
+        "            foto[0][i] = (255, 255, 255)\n",
+        "            foto[1][i] = (255, 255, 255)\n",
+        "            foto[2][i] = (255, 255, 255)\n",
+        "            foto[alto-1][i] = (255, 255, 255)\n",
+        "            foto[alto-2][i] = (255, 255, 255)\n",
+        "            foto[alto-3][i] = (255, 255, 255)\n",
         "\n",
-        "    for i in range(alto):\n",
-        "      foto[i][0]=(255,255,255)\n",
-        "      foto[i][1]=(255,255,255)\n",
-        "      foto[i][2]=(255,255,255)\n",
-        "      foto[i][ancho-1]=(255,255,255)\n",
-        "      foto[i][ancho-2]=(255,255,255)\n",
-        "      foto[i][ancho-3]=(255,255,255)\n",
-        "    \n",
-        "    cv2.imwrite(d,foto)"
+        "        # Se añaden tres columnas blancas a cada imagen\n",
+        "        for i in range(alto):\n",
+        "            foto[i][0] = (255, 255, 255)\n",
+        "            foto[i][1] = (255, 255, 255)\n",
+        "            foto[i][2] = (255, 255, 255)\n",
+        "            foto[i][ancho-1] = (255, 255, 255)\n",
+        "            foto[i][ancho-2] = (255, 255, 255)\n",
+        "            foto[i][ancho-3] = (255, 255, 255)\n",
+        "\n",
+        "    cv2.imwrite(d, foto)\n"
       ]
     },
     {
@@ -87,10 +93,10 @@
       },
       "outputs": [],
       "source": [
-        "dientes=[]\n",
+        "dientes = []\n",
         "for fichero in os.listdir(\"dientes/\"):\n",
         "    if fichero.endswith('.png'):\n",
-        "          dientes.append(\"dientes/\"+fichero)  "
+        "        dientes.append(\"dientes/\"+fichero)\n"
       ]
     },
     {
@@ -112,10 +118,10 @@
       },
       "outputs": [],
       "source": [
-        "nervios=[]\n",
+        "nervios = []\n",
         "for fichero in os.listdir(\"nervios/\"):\n",
         "    if fichero.endswith('.png'):\n",
-        "          nervios.append(\"nervios/\"+fichero)  "
+        "        nervios.append(\"nervios/\"+fichero)"
       ]
     },
     {
@@ -146,21 +152,28 @@
       },
       "outputs": [],
       "source": [
+        "# Método encargado de obtener los puntos del convex hull de una imagen.\n",
+        "#\n",
+        "# Parámetros:\n",
+        "#  - dic: .\n",
+        "#  - salida: .\n",
+        "#  - mostrar: .\n",
+        "#  - sig: .\n",
         "def detecta_borde_skimage(dic, salida, mostrar=False, sig=1):\n",
-        "  if not os.path.isdir(salida):\n",
-        "      os.makedirs(salida,exist_ok=True)\n",
+        "    if not os.path.isdir(salida):\n",
+        "        os.makedirs(salida, exist_ok=True)\n",
         "\n",
-        "  for d in dic:\n",
-        "    imagen = io.imread(d)\n",
-        "    ruta=d.split(\"/\")\n",
-        "    gris = rgb2gray(imagen)\n",
-        "    borde = feature.canny(gris, sigma=sig)\n",
-        "    if mostrar:\n",
-        "      plt.imshow(borde)\n",
-        "      plt.axis('off')\n",
-        "      plt.show()\n",
-        "    borde=img_as_ubyte(borde)\n",
-        "    io.imsave(salida+ruta[1],borde)"
+        "    for d in dic:\n",
+        "        imagen = io.imread(d)\n",
+        "        ruta = d.split(\"/\")\n",
+        "        gris = rgb2gray(imagen)\n",
+        "        borde = feature.canny(gris, sigma=sig)\n",
+        "        if mostrar:\n",
+        "            plt.imshow(borde)\n",
+        "            plt.axis('off')\n",
+        "            plt.show()\n",
+        "        borde = img_as_ubyte(borde)\n",
+        "        io.imsave(salida+ruta[1], borde)\n"
       ]
     },
     {
@@ -777,7 +790,7 @@
         }
       ],
       "source": [
-        "detecta_borde_skimage(dientes,'dientes_sk/',mostrar=True, sig=4)"
+        "detecta_borde_skimage(dientes, 'dientes_sk/', mostrar=True, sig=4)\n"
       ]
     },
     {
@@ -1456,10 +1469,10 @@
       },
       "outputs": [],
       "source": [
-        "dientes_sk=[]\n",
+        "dientes_sk = []\n",
         "for fichero in os.listdir(\"dientes_sk/\"):\n",
         "    if fichero.endswith('.png'):\n",
-        "          dientes_sk.append(\"dientes_sk/\"+fichero)  "
+        "        dientes_sk.append(\"dientes_sk/\"+fichero)\n"
       ]
     },
     {
@@ -1986,7 +1999,7 @@
         }
       ],
       "source": [
-        "diccionario_dientes=obtener_puntos(dientes_sk,dibujar=True)"
+        "diccionario_dientes = obtener_puntos(dientes_sk, dibujar=True)\n"
       ]
     },
     {
@@ -1997,10 +2010,10 @@
       },
       "outputs": [],
       "source": [
-        "nervios_sk=[]\n",
+        "nervios_sk = []\n",
         "for fichero in os.listdir(\"nervios_sk/\"):\n",
         "    if fichero.endswith('.png'):\n",
-        "          nervios_sk.append(\"nervios_sk/\"+fichero)  "
+        "        nervios_sk.append(\"nervios_sk/\"+fichero)\n"
       ]
     },
     {
@@ -2527,7 +2540,7 @@
         }
       ],
       "source": [
-        "diccionario_nervios=obtener_puntos(nervios_sk,dibujar=True)"
+        "diccionario_nervios = obtener_puntos(nervios_sk, dibujar=True)\n"
       ]
     },
     {
@@ -2547,14 +2560,22 @@
       },
       "outputs": [],
       "source": [
-        "def obtiene_puntos(foto,diccionario):\n",
-        "  x=[]\n",
-        "  y=[]\n",
-        "  for i in range(len(diccionario[foto])):\n",
-        "    x.append(int(diccionario[foto][i][0][0]))\n",
-        "    y.append(int(diccionario[foto][i][0][1]))\n",
+        "# Método encargado de obtener los puntos del borde de una imagen.\n",
+        "#\n",
+        "# Parámetros:\n",
+        "#  - foto: foto de la que se quieren obtener los puntos.\n",
+        "#  - diccionario: diccionario que contiene el valor de los puntos del borde\n",
+        "#                 de todas las imágenes.\n",
+        "# Return:\n",
+        "#  - x, y: listas de cada eje que contienen los puntos del borde.\n",
+        "def obtiene_puntos(foto, diccionario):\n",
+        "    x = []\n",
+        "    y = []\n",
+        "    for i in range(len(diccionario[foto])):\n",
+        "        x.append(int(diccionario[foto][i][0][0]))\n",
+        "        y.append(int(diccionario[foto][i][0][1]))\n",
         "\n",
-        "  return x,y"
+        "    return x, y"
       ]
     },
     {
@@ -2565,19 +2586,29 @@
       },
       "outputs": [],
       "source": [
-        "def inicializa_JSON(foto,puntos_x,puntos_y):\n",
-        "  atributos={}\n",
-        "  atributos[\"shape_attributes\"]={}\n",
-        "  atributos[\"shape_attributes\"][\"all_points_x\"]=puntos_x\n",
-        "  atributos[\"shape_attributes\"][\"all_points_y\"]=puntos_y\n",
-        "   \n",
-        "  datos={}\n",
-        "  datos[foto]={}\n",
-        "  datos[foto][\"filename\"]=foto\n",
-        "  datos[foto][\"regions\"]=[]\n",
-        "  datos[foto][\"regions\"].append(atributos)\n",
-        "  \n",
-        "  return datos  "
+        "# Método encargado de inicializar el JSON de una imagen, añadiendo los puntos\n",
+        "# del borde en cada eje y su nombre.\n",
+        "#\n",
+        "# Parámetros:\n",
+        "#  - foto: foto de la que se quiere inicializar el JSON.\n",
+        "#  - puntos_x: puntos del borde en el eje X.\n",
+        "#  - puntos_y: puntos del borde en el eje Y.\n",
+        "# Return:\n",
+        "#  - datos: diccionario con todos los datos añadidos para poder convertirlo a\n",
+        "#           JSON.\n",
+        "def inicializa_JSON(foto, puntos_x, puntos_y):\n",
+        "    atributos = {}\n",
+        "    atributos[\"shape_attributes\"] = {}\n",
+        "    atributos[\"shape_attributes\"][\"all_points_x\"] = puntos_x\n",
+        "    atributos[\"shape_attributes\"][\"all_points_y\"] = puntos_y\n",
+        "\n",
+        "    datos = {}\n",
+        "    datos[foto] = {}\n",
+        "    datos[foto][\"filename\"] = foto\n",
+        "    datos[foto][\"regions\"] = []\n",
+        "    datos[foto][\"regions\"].append(atributos)\n",
+        "\n",
+        "    return datos\n"
       ]
     },
     {
@@ -2588,26 +2619,41 @@
       },
       "outputs": [],
       "source": [
-        "def crea_JSON(diccionario_dientes,diccionario_nervios):\n",
-        "  if not os.path.isdir('final/'):\n",
-        "        os.makedirs('final/',exist_ok=True)\n",
-        "  claves_dientes=list(diccionario_dientes.keys())\n",
-        "  claves_nervios=list(diccionario_nervios.keys())\n",
+        "# Método encargado de crear los JSON de las imágenes.\n",
+        "#\n",
+        "# Parámetros:\n",
+        "#  - diccionario_dientes: diccionario con las imágenes y los valores del borde\n",
+        "#                         del diente.\n",
+        "#  - diccionario_nervios: diccionario con las imágenes y los valores del borde\n",
+        "#                         del nervio.\n",
+        "def crea_JSON(diccionario_dientes, diccionario_nervios):\n",
+        "    # Creamos el directorio donde se guardan los JSON\n",
+        "    if not os.path.isdir('final/'):\n",
+        "        os.makedirs('final/', exist_ok=True)\n",
         "\n",
-        "  fotos_buenas=list(set(claves_dientes) & set(claves_nervios))\n",
-        "  \n",
-        "  for f in fotos_buenas:\n",
-        "    puntos_x_diente,puntos_y_diente=obtiene_puntos(f,diccionario_dientes)\n",
-        "    archivo=inicializa_JSON(f,puntos_x_diente,puntos_y_diente)    \n",
-        "    with open('final/'+f[:-4]+'_1.json', 'w') as fichero:\n",
-        "      json.dump(archivo, fichero)\n",
-        "      \n",
-        "    puntos_x_nervio,puntos_y_nervio=obtiene_puntos(f,diccionario_nervios)\n",
-        "    archivo=inicializa_JSON(f,puntos_x_nervio,puntos_y_nervio)\n",
-        "    with open('final/'+f[:-4]+'_2.json', 'w') as fichero:\n",
-        "      json.dump(archivo, fichero)\n",
+        "    # Obtenemos el nombre de todas las imágenes\n",
+        "    claves_dientes = list(diccionario_dientes.keys())\n",
+        "    claves_nervios = list(diccionario_nervios.keys())\n",
         "\n",
-        "    shutil.copy(r'reales/'+f[:-4]+'.png',r'final/')  "
+        "    # Nos quedamos con aquellas imágenes que tienen el borde correcto tanto \n",
+        "    # para el diente como para el nervio\n",
+        "    fotos_buenas = list(set(claves_dientes) & set(claves_nervios))\n",
+        "\n",
+        "    #Creamos el JSON de cada imágen del diente y del nervio\n",
+        "    for f in fotos_buenas:\n",
+        "        puntos_x_diente, puntos_y_diente = obtiene_puntos(f,\n",
+        "                                                          diccionario_dientes)\n",
+        "        archivo = inicializa_JSON(f, puntos_x_diente, puntos_y_diente)\n",
+        "        with open('final/'+f[:-4]+'_1.json', 'w') as fichero:\n",
+        "            json.dump(archivo, fichero)\n",
+        "\n",
+        "        puntos_x_nervio, puntos_y_nervio = obtiene_puntos(f,\n",
+        "                                                          diccionario_nervios)\n",
+        "        archivo = inicializa_JSON(f, puntos_x_nervio, puntos_y_nervio)\n",
+        "        with open('final/'+f[:-4]+'_2.json', 'w') as fichero:\n",
+        "            json.dump(archivo, fichero)\n",
+        "\n",
+        "        shutil.copy(r'reales/'+f[:-4]+'.png', r'final/')"
       ]
     },
     {
@@ -2618,7 +2664,7 @@
       },
       "outputs": [],
       "source": [
-        "crea_JSON(diccionario_dientes,diccionario_nervios)"
+        "crea_JSON(diccionario_dientes, diccionario_nervios)"
       ]
     },
     {
@@ -2638,9 +2684,9 @@
       },
       "outputs": [],
       "source": [
-        "lista_ficheros=[]\n",
+        "lista_ficheros = []\n",
         "for fichero in os.listdir(\"final/\"):\n",
-        "  lista_ficheros.append(\"final/\"+fichero) "
+        "    lista_ficheros.append(\"final/\"+fichero)"
       ]
     },
     {
@@ -2651,9 +2697,9 @@
       },
       "outputs": [],
       "source": [
-        "with zipfile.ZipFile('final.zip','w') as zip:\n",
-        "  for fich in lista_ficheros:\n",
-        "    zip.write(fich)\n",
+        "with zipfile.ZipFile('final.zip', 'w') as zip:\n",
+        "    for fich in lista_ficheros:\n",
+        "        zip.write(fich)\n",
         "zip.close()"
       ]
     }
